--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "zustand": "^5.0.3"
